27 November 2018: Wouter
	- Fix DNS64 to not store intermediate results in cache, this avoids
	  other threads from picking up the wrong data.  The module restores
	  the previous no_cache_store setting when the the module is finished.
	- Fix #4208: 'stub-no-cache' and 'forward-no-cache' not work.

26 November 2018: Wouter
	- Fix to not set GLOB_NOSORT so the unbound.conf include: files are
	  sorted and in a predictable order.
	- Fix #4193: Fix that prefetch failure does not overwrite valid cache
	  entry with SERVFAIL.
	- Add unbound-control view_local_datas command, like local_datas.
	- Fix that unbound-control can send file for view_local_datas.

22 November 2018: Wouter
	- With ./configure --with-pyunbound --with-pythonmodule
	  PYTHON_VERSION=3.6 or with 2.7 unbound can compile and unit tests
	  succeed for the python module.
	- pythonmod logs the python error and traceback on failure.
	- ignore debug python module for test in doxygen output.
	- review fixes for python module.
	- Fix #4209: Crash in libunbound when called from getdns.
	- auth zone zonefiles can be in a chroot, the chroot directory
	  components are removed before use.
	- Fix that empty zonefile means the zonefile is not set and not used.
	- make depend.

21 November 2018: Wouter
	- Scrub NS records from NODATA responses as well.

20 November 2018: Wouter
	- Scrub NS records from NXDOMAIN responses to stop fragmentation
	  poisoning of the cache.
	- Add patch from Jan Vcelak for pythonmod,
	  add sockaddr_storage getters, add support for query callbacks,
	  allow raw address access via comm_reply and update API documentation.
	- Removed compile warnings in pythonmod sockaddr routines.

19 November 2018: Wouter
	- Support SO_REUSEPORT_LB in FreeBSD 12 with the so-reuseport: yes
	  option in unbound.conf.

6 November 2018: Ralph
	- Bugfix min-client-subnet-ipv6

25 October 2018: Ralph
	- Add min-client-subnet-ipv6 and min-client-subnet-ipv4 options.

25 October 2018: Wouter