@@ -3,6 +3,8 @@
 	  other threads from picking up the wrong data.  The module restores
 	  the previous no_cache_store setting when the the module is finished.
 	- Fix #4208: 'stub-no-cache' and 'forward-no-cache' not work.
+	- New and better fix for Fix #4193: Fix that prefetch failure does
+	  not overwrite valid cache entry with SERVFAIL.
 
 26 November 2018: Wouter
 	- Fix to not set GLOB_NOSORT so the unbound.conf include: files are
